[package]
name = "projet"
version = "0.1.0"
edition = "2021"


[workspace]
members = [ "algorithms", "client", "server","shared"]

# Permet de centraliser les dépendances
[workspace.dependencies]
shared = {path = "shared"}
serde = { version = "=1.0.215", features = ["derive"] }
serde_json = "1.0.133"

[dependencies]
serde.workspace = true
serde_json.workspace = true
